style.css
#mapCanvas {
    position: absolute;
    top: 0px;
    left: 0px;
    border: 1px solid #d3d3d3;
    /*on bottom*/
    z-index: 0;
}
#mapcontrols {
    position: absolute;
    top: 10px;
    left: 10px;
    max-width: 100px;
    background-color: #ffffff;
    border: 1px solid #d3d3d3;
    /*on top of map*/
    z-index: 1;
}
#coorddisplay {
    position: absolute;
    left: 10px;
    top: 565px;
    background-color: #ffffff;
    border: 1px solid #d3d3d3;
    /*on top of map*/
    z-index: 1;
}
#categories {
    position: absolute;
    width: 300px;
    top: 5px;
    left: 810px;
}
#addFeature {
    position: absolute;
    top: 225px;
    left: 810px;
}
#featureinfo {
    position: absolute;
    max-width: 600px;
    top: 250px;
    left: 810px;
}
#mouseoverbox {
    position: absolute;
    /*off screen initially*/
    top: -1000px;
    left: -1000px;
/*    width: 200px;
    height: 20px;*/
    background-color: #ffffff;
    border: 1px solid #d3d3d3;
    /*on top of everything else*/
    z-index: 2;
}

